syntax = "proto3";

package rpcproto;

enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
}

message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
}

message Person {
    int32 id = 1;
    string name = 2;
    string email = 3;
    repeated PhoneNumber phones = 4;
}

message AddrBook {
    repeated Person people = 1;
}

message AddPersonRequest {
    Person person = 1;    
}

// return person id
message AddPersonResponse {
    int32 id = 1;    
}

service AddrBookStore {
    rpc AddPerson(AddPersonRequest) returns(AddPersonResponse);
}

